# intro_cmake_build

./: .clang-format  CMakeLists.crinkler.txt  CMakeLists.nasm.txt  CMakeLists.txt  crinkler.props  readme.md
src/: main.cpp
